_generated-doc/2.2/config/quarkus-log-logging-log-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-log-logging-log-config_configuration]]link:#quarkus-log-logging-log-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-log-logging-log-config_quarkus.log.level]]`link:#quarkus-log-logging-log-config_quarkus.log.level[quarkus.log.level]`

[.description]
--
The log level of the root category, which is used as the default log level for all categories.

JBoss Logging supports Apache style log levels:

* {@link org.jboss.logmanager.Level#FATAL}
* {@link org.jboss.logmanager.Level#ERROR}
* {@link org.jboss.logmanager.Level#WARN}
* {@link org.jboss.logmanager.Level#INFO}
* {@link org.jboss.logmanager.Level#DEBUG}
* {@link org.jboss.logmanager.Level#TRACE}

In addition, it also supports the standard JDK log levels.
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`INFO`


h|[[quarkus-log-logging-log-config_quarkus.log.console-console-logging]]link:#quarkus-log-logging-log-config_quarkus.log.console-console-logging[Console logging]

h|Type
h|Default

a| [[quarkus-log-logging-log-config_quarkus.log.console.enable]]`link:#quarkus-log-logging-log-config_quarkus.log.console.enable[quarkus.log.console.enable]`

[.description]
--
If console logging should be enabled
--|boolean 
|`true`


a| [[quarkus-log-logging-log-config_quarkus.log.console.stderr]]`link:#quarkus-log-logging-log-config_quarkus.log.console.stderr[quarkus.log.console.stderr]`

[.description]
--
If console logging should go to `System++#++err` instead of `System++#++out`.
--|boolean 
|`false`


a| [[quarkus-log-logging-log-config_quarkus.log.console.format]]`link:#quarkus-log-logging-log-config_quarkus.log.console.format[quarkus.log.console.format]`

[.description]
--
The log format. Note that this value will be ignored if an extension is present that takes control of console formatting (e.g. an XML or JSON-format extension).
--|string 
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{3.}] (%t) %s%e%n`


a| [[quarkus-log-logging-log-config_quarkus.log.console.level]]`link:#quarkus-log-logging-log-config_quarkus.log.console.level[quarkus.log.console.level]`

[.description]
--
The console log level.
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`ALL`


a| [[quarkus-log-logging-log-config_quarkus.log.console.darken]]`link:#quarkus-log-logging-log-config_quarkus.log.console.darken[quarkus.log.console.darken]`

[.description]
--
Specify how much the colors should be darkened. Note that this value will be ignored if an extension is present that takes control of console formatting (e.g. an XML or JSON-format extension).
--|int 
|`0`


a| [[quarkus-log-logging-log-config_quarkus.log.console.async]]`link:#quarkus-log-logging-log-config_quarkus.log.console.async[quarkus.log.console.async]`

[.description]
--
Indicates whether to log asynchronously
--|boolean 
|`false`


a| [[quarkus-log-logging-log-config_quarkus.log.console.async.queue-length]]`link:#quarkus-log-logging-log-config_quarkus.log.console.async.queue-length[quarkus.log.console.async.queue-length]`

[.description]
--
The queue length to use before flushing writing
--|int 
|`512`


a| [[quarkus-log-logging-log-config_quarkus.log.console.async.overflow]]`link:#quarkus-log-logging-log-config_quarkus.log.console.async.overflow[quarkus.log.console.async.overflow]`

[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full
--|`block`, `discard` 
|`block`


h|[[quarkus-log-logging-log-config_quarkus.log.file-file-logging]]link:#quarkus-log-logging-log-config_quarkus.log.file-file-logging[File logging]

h|Type
h|Default

a| [[quarkus-log-logging-log-config_quarkus.log.file.enable]]`link:#quarkus-log-logging-log-config_quarkus.log.file.enable[quarkus.log.file.enable]`

[.description]
--
If file logging should be enabled
--|boolean 
|`false`


a| [[quarkus-log-logging-log-config_quarkus.log.file.format]]`link:#quarkus-log-logging-log-config_quarkus.log.file.format[quarkus.log.file.format]`

[.description]
--
The log format
--|string 
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %h %N[%i] %-5p [%c{3.}] (%t) %s%e%n`


a| [[quarkus-log-logging-log-config_quarkus.log.file.level]]`link:#quarkus-log-logging-log-config_quarkus.log.file.level[quarkus.log.file.level]`

[.description]
--
The level of logs to be written into the file.
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`ALL`


a| [[quarkus-log-logging-log-config_quarkus.log.file.path]]`link:#quarkus-log-logging-log-config_quarkus.log.file.path[quarkus.log.file.path]`

[.description]
--
The name of the file in which logs will be written.
--|link:https://docs.oracle.com/javase/8/docs/api/java/io/File.html[File]
 
|`quarkus.log`


a| [[quarkus-log-logging-log-config_quarkus.log.file.async]]`link:#quarkus-log-logging-log-config_quarkus.log.file.async[quarkus.log.file.async]`

[.description]
--
Indicates whether to log asynchronously
--|boolean 
|`false`


a| [[quarkus-log-logging-log-config_quarkus.log.file.async.queue-length]]`link:#quarkus-log-logging-log-config_quarkus.log.file.async.queue-length[quarkus.log.file.async.queue-length]`

[.description]
--
The queue length to use before flushing writing
--|int 
|`512`


a| [[quarkus-log-logging-log-config_quarkus.log.file.async.overflow]]`link:#quarkus-log-logging-log-config_quarkus.log.file.async.overflow[quarkus.log.file.async.overflow]`

[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full
--|`block`, `discard` 
|`block`


a| [[quarkus-log-logging-log-config_quarkus.log.file.rotation.max-file-size]]`link:#quarkus-log-logging-log-config_quarkus.log.file.rotation.max-file-size[quarkus.log.file.rotation.max-file-size]`

[.description]
--
The maximum file size of the log file after which a rotation is executed.
--|MemorySize  link:#memory-size-note-anchor[icon:question-circle[], title=More information about the MemorySize format]
|`10`


a| [[quarkus-log-logging-log-config_quarkus.log.file.rotation.max-backup-index]]`link:#quarkus-log-logging-log-config_quarkus.log.file.rotation.max-backup-index[quarkus.log.file.rotation.max-backup-index]`

[.description]
--
The maximum number of backups to keep.
--|int 
|`1`


a| [[quarkus-log-logging-log-config_quarkus.log.file.rotation.file-suffix]]`link:#quarkus-log-logging-log-config_quarkus.log.file.rotation.file-suffix[quarkus.log.file.rotation.file-suffix]`

[.description]
--
File handler rotation file suffix. When used, the file will be rotated based on its suffix. Example fileSuffix: .yyyy-MM-dd
--|string 
|


a| [[quarkus-log-logging-log-config_quarkus.log.file.rotation.rotate-on-boot]]`link:#quarkus-log-logging-log-config_quarkus.log.file.rotation.rotate-on-boot[quarkus.log.file.rotation.rotate-on-boot]`

[.description]
--
Indicates whether to rotate log files on server initialization. 
 You need to either set a `max-file-size` or configure a `file-suffix` for it to work.
--|boolean 
|`true`


h|[[quarkus-log-logging-log-config_quarkus.log.syslog-syslog-logging]]link:#quarkus-log-logging-log-config_quarkus.log.syslog-syslog-logging[Syslog logging]

h|Type
h|Default

a| [[quarkus-log-logging-log-config_quarkus.log.syslog.enable]]`link:#quarkus-log-logging-log-config_quarkus.log.syslog.enable[quarkus.log.syslog.enable]`

[.description]
--
If syslog logging should be enabled
--|boolean 
|`false`


a| [[quarkus-log-logging-log-config_quarkus.log.syslog.endpoint]]`link:#quarkus-log-logging-log-config_quarkus.log.syslog.endpoint[quarkus.log.syslog.endpoint]`

[.description]
--
The IP address and port of the syslog server
--|host:port 
|`localhost:514`


a| [[quarkus-log-logging-log-config_quarkus.log.syslog.app-name]]`link:#quarkus-log-logging-log-config_quarkus.log.syslog.app-name[quarkus.log.syslog.app-name]`

[.description]
--
The app name used when formatting the message in RFC5424 format
--|string 
|


a| [[quarkus-log-logging-log-config_quarkus.log.syslog.hostname]]`link:#quarkus-log-logging-log-config_quarkus.log.syslog.hostname[quarkus.log.syslog.hostname]`

[.description]
--
The name of the host the messages are being sent from
--|string 
|


a| [[quarkus-log-logging-log-config_quarkus.log.syslog.facility]]`link:#quarkus-log-logging-log-config_quarkus.log.syslog.facility[quarkus.log.syslog.facility]`

[.description]
--
Sets the facility used when calculating the priority of the message as defined by RFC-5424 and RFC-3164
--|`kernel`, `user-level`, `mail-system`, `system-daemons`, `security`, `syslogd`, `line-printer`, `network-news`, `uucp`, `clock-daemon`, `security2`, `ftp-daemon`, `ntp`, `log-audit`, `log-alert`, `clock-daemon2`, `local-use-0`, `local-use-1`, `local-use-2`, `local-use-3`, `local-use-4`, `local-use-5`, `local-use-6`, `local-use-7` 
|`user-level`


a| [[quarkus-log-logging-log-config_quarkus.log.syslog.syslog-type]]`link:#quarkus-log-logging-log-config_quarkus.log.syslog.syslog-type[quarkus.log.syslog.syslog-type]`

[.description]
--
Set the `SyslogType syslog type` this handler should use to format the message sent
--|`rfc5424`, `rfc3164` 
|`rfc5424`


a| [[quarkus-log-logging-log-config_quarkus.log.syslog.protocol]]`link:#quarkus-log-logging-log-config_quarkus.log.syslog.protocol[quarkus.log.syslog.protocol]`

[.description]
--
Sets the protocol used to connect to the syslog server
--|`tcp`, `udp`, `ssl-tcp` 
|`tcp`


a| [[quarkus-log-logging-log-config_quarkus.log.syslog.use-counting-framing]]`link:#quarkus-log-logging-log-config_quarkus.log.syslog.use-counting-framing[quarkus.log.syslog.use-counting-framing]`

[.description]
--
Set to `true` if the message being sent should be prefixed with the size of the message
--|boolean 
|`false`


a| [[quarkus-log-logging-log-config_quarkus.log.syslog.truncate]]`link:#quarkus-log-logging-log-config_quarkus.log.syslog.truncate[quarkus.log.syslog.truncate]`

[.description]
--
Set to `true` if the message should be truncated
--|boolean 
|`true`


a| [[quarkus-log-logging-log-config_quarkus.log.syslog.block-on-reconnect]]`link:#quarkus-log-logging-log-config_quarkus.log.syslog.block-on-reconnect[quarkus.log.syslog.block-on-reconnect]`

[.description]
--
Enables or disables blocking when attempting to reconnect a `org.jboss.logmanager.handlers.SyslogHandler.Protocol++#++TCP
TCP` or `org.jboss.logmanager.handlers.SyslogHandler.Protocol++#++SSL_TCP SSL TCP` protocol
--|boolean 
|`false`


a| [[quarkus-log-logging-log-config_quarkus.log.syslog.format]]`link:#quarkus-log-logging-log-config_quarkus.log.syslog.format[quarkus.log.syslog.format]`

[.description]
--
The log message format
--|string 
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{3.}] (%t) %s%e%n`


a| [[quarkus-log-logging-log-config_quarkus.log.syslog.level]]`link:#quarkus-log-logging-log-config_quarkus.log.syslog.level[quarkus.log.syslog.level]`

[.description]
--
The log level specifying, which message levels will be logged by syslog logger
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`ALL`


a| [[quarkus-log-logging-log-config_quarkus.log.syslog.async]]`link:#quarkus-log-logging-log-config_quarkus.log.syslog.async[quarkus.log.syslog.async]`

[.description]
--
Indicates whether to log asynchronously
--|boolean 
|`false`


a| [[quarkus-log-logging-log-config_quarkus.log.syslog.async.queue-length]]`link:#quarkus-log-logging-log-config_quarkus.log.syslog.async.queue-length[quarkus.log.syslog.async.queue-length]`

[.description]
--
The queue length to use before flushing writing
--|int 
|`512`


a| [[quarkus-log-logging-log-config_quarkus.log.syslog.async.overflow]]`link:#quarkus-log-logging-log-config_quarkus.log.syslog.async.overflow[quarkus.log.syslog.async.overflow]`

[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full
--|`block`, `discard` 
|`block`


h|[[quarkus-log-logging-log-config_quarkus.log.categories-logging-categories]]link:#quarkus-log-logging-log-config_quarkus.log.categories-logging-categories[Logging categories]

h|Type
h|Default

a| [[quarkus-log-logging-log-config_quarkus.log.category.-categories-.level]]`link:#quarkus-log-logging-log-config_quarkus.log.category.-categories-.level[quarkus.log.category."categories".level]`

[.description]
--
The log level for this category. Note that to get log levels below `INFO`, the minimum level build time configuration option needs to be adjusted as well.
--|InheritableLevel 
|`inherit`


a| [[quarkus-log-logging-log-config_quarkus.log.category.-categories-.handlers]]`link:#quarkus-log-logging-log-config_quarkus.log.category.-categories-.handlers[quarkus.log.category."categories".handlers]`

[.description]
--
The names of the handlers to link to this category.
--|list of string 
|


a| [[quarkus-log-logging-log-config_quarkus.log.category.-categories-.use-parent-handlers]]`link:#quarkus-log-logging-log-config_quarkus.log.category.-categories-.use-parent-handlers[quarkus.log.category."categories".use-parent-handlers]`

[.description]
--
Specify whether or not this logger should send its output to its parent Logger
--|boolean 
|`true`


h|[[quarkus-log-logging-log-config_quarkus.log.console-handlers-console-handlers]]link:#quarkus-log-logging-log-config_quarkus.log.console-handlers-console-handlers[Console handlers]

h|Type
h|Default

a| [[quarkus-log-logging-log-config_quarkus.log.handler.console.-console-handlers-.enable]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.console.-console-handlers-.enable[quarkus.log.handler.console."console-handlers".enable]`

[.description]
--
If console logging should be enabled
--|boolean 
|`true`


a| [[quarkus-log-logging-log-config_quarkus.log.handler.console.-console-handlers-.stderr]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.console.-console-handlers-.stderr[quarkus.log.handler.console."console-handlers".stderr]`

[.description]
--
If console logging should go to `System++#++err` instead of `System++#++out`.
--|boolean 
|`false`


a| [[quarkus-log-logging-log-config_quarkus.log.handler.console.-console-handlers-.format]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.console.-console-handlers-.format[quarkus.log.handler.console."console-handlers".format]`

[.description]
--
The log format. Note that this value will be ignored if an extension is present that takes control of console formatting (e.g. an XML or JSON-format extension).
--|string 
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{3.}] (%t) %s%e%n`


a| [[quarkus-log-logging-log-config_quarkus.log.handler.console.-console-handlers-.level]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.console.-console-handlers-.level[quarkus.log.handler.console."console-handlers".level]`

[.description]
--
The console log level.
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`ALL`


a| [[quarkus-log-logging-log-config_quarkus.log.handler.console.-console-handlers-.darken]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.console.-console-handlers-.darken[quarkus.log.handler.console."console-handlers".darken]`

[.description]
--
Specify how much the colors should be darkened. Note that this value will be ignored if an extension is present that takes control of console formatting (e.g. an XML or JSON-format extension).
--|int 
|`0`


a| [[quarkus-log-logging-log-config_quarkus.log.handler.console.-console-handlers-.async]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.console.-console-handlers-.async[quarkus.log.handler.console."console-handlers".async]`

[.description]
--
Indicates whether to log asynchronously
--|boolean 
|`false`


a| [[quarkus-log-logging-log-config_quarkus.log.handler.console.-console-handlers-.async.queue-length]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.console.-console-handlers-.async.queue-length[quarkus.log.handler.console."console-handlers".async.queue-length]`

[.description]
--
The queue length to use before flushing writing
--|int 
|`512`


a| [[quarkus-log-logging-log-config_quarkus.log.handler.console.-console-handlers-.async.overflow]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.console.-console-handlers-.async.overflow[quarkus.log.handler.console."console-handlers".async.overflow]`

[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full
--|`block`, `discard` 
|`block`


h|[[quarkus-log-logging-log-config_quarkus.log.file-handlers-file-handlers]]link:#quarkus-log-logging-log-config_quarkus.log.file-handlers-file-handlers[File handlers]

h|Type
h|Default

a| [[quarkus-log-logging-log-config_quarkus.log.handler.file.-file-handlers-.enable]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.file.-file-handlers-.enable[quarkus.log.handler.file."file-handlers".enable]`

[.description]
--
If file logging should be enabled
--|boolean 
|`false`


a| [[quarkus-log-logging-log-config_quarkus.log.handler.file.-file-handlers-.format]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.file.-file-handlers-.format[quarkus.log.handler.file."file-handlers".format]`

[.description]
--
The log format
--|string 
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %h %N[%i] %-5p [%c{3.}] (%t) %s%e%n`


a| [[quarkus-log-logging-log-config_quarkus.log.handler.file.-file-handlers-.level]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.file.-file-handlers-.level[quarkus.log.handler.file."file-handlers".level]`

[.description]
--
The level of logs to be written into the file.
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`ALL`


a| [[quarkus-log-logging-log-config_quarkus.log.handler.file.-file-handlers-.path]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.file.-file-handlers-.path[quarkus.log.handler.file."file-handlers".path]`

[.description]
--
The name of the file in which logs will be written.
--|link:https://docs.oracle.com/javase/8/docs/api/java/io/File.html[File]
 
|`quarkus.log`


a| [[quarkus-log-logging-log-config_quarkus.log.handler.file.-file-handlers-.async]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.file.-file-handlers-.async[quarkus.log.handler.file."file-handlers".async]`

[.description]
--
Indicates whether to log asynchronously
--|boolean 
|`false`


a| [[quarkus-log-logging-log-config_quarkus.log.handler.file.-file-handlers-.async.queue-length]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.file.-file-handlers-.async.queue-length[quarkus.log.handler.file."file-handlers".async.queue-length]`

[.description]
--
The queue length to use before flushing writing
--|int 
|`512`


a| [[quarkus-log-logging-log-config_quarkus.log.handler.file.-file-handlers-.async.overflow]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.file.-file-handlers-.async.overflow[quarkus.log.handler.file."file-handlers".async.overflow]`

[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full
--|`block`, `discard` 
|`block`


a| [[quarkus-log-logging-log-config_quarkus.log.handler.file.-file-handlers-.rotation.max-file-size]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.file.-file-handlers-.rotation.max-file-size[quarkus.log.handler.file."file-handlers".rotation.max-file-size]`

[.description]
--
The maximum file size of the log file after which a rotation is executed.
--|MemorySize  link:#memory-size-note-anchor[icon:question-circle[], title=More information about the MemorySize format]
|`10`


a| [[quarkus-log-logging-log-config_quarkus.log.handler.file.-file-handlers-.rotation.max-backup-index]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.file.-file-handlers-.rotation.max-backup-index[quarkus.log.handler.file."file-handlers".rotation.max-backup-index]`

[.description]
--
The maximum number of backups to keep.
--|int 
|`1`


a| [[quarkus-log-logging-log-config_quarkus.log.handler.file.-file-handlers-.rotation.file-suffix]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.file.-file-handlers-.rotation.file-suffix[quarkus.log.handler.file."file-handlers".rotation.file-suffix]`

[.description]
--
File handler rotation file suffix. When used, the file will be rotated based on its suffix. Example fileSuffix: .yyyy-MM-dd
--|string 
|


a| [[quarkus-log-logging-log-config_quarkus.log.handler.file.-file-handlers-.rotation.rotate-on-boot]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.file.-file-handlers-.rotation.rotate-on-boot[quarkus.log.handler.file."file-handlers".rotation.rotate-on-boot]`

[.description]
--
Indicates whether to rotate log files on server initialization. 
 You need to either set a `max-file-size` or configure a `file-suffix` for it to work.
--|boolean 
|`true`


h|[[quarkus-log-logging-log-config_quarkus.log.syslog-handlers-syslog-handlers]]link:#quarkus-log-logging-log-config_quarkus.log.syslog-handlers-syslog-handlers[Syslog handlers]

h|Type
h|Default

a| [[quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.enable]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.enable[quarkus.log.handler.syslog."syslog-handlers".enable]`

[.description]
--
If syslog logging should be enabled
--|boolean 
|`false`


a| [[quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.endpoint]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.endpoint[quarkus.log.handler.syslog."syslog-handlers".endpoint]`

[.description]
--
The IP address and port of the syslog server
--|host:port 
|`localhost:514`


a| [[quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.app-name]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.app-name[quarkus.log.handler.syslog."syslog-handlers".app-name]`

[.description]
--
The app name used when formatting the message in RFC5424 format
--|string 
|


a| [[quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.hostname]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.hostname[quarkus.log.handler.syslog."syslog-handlers".hostname]`

[.description]
--
The name of the host the messages are being sent from
--|string 
|


a| [[quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.facility]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.facility[quarkus.log.handler.syslog."syslog-handlers".facility]`

[.description]
--
Sets the facility used when calculating the priority of the message as defined by RFC-5424 and RFC-3164
--|`kernel`, `user-level`, `mail-system`, `system-daemons`, `security`, `syslogd`, `line-printer`, `network-news`, `uucp`, `clock-daemon`, `security2`, `ftp-daemon`, `ntp`, `log-audit`, `log-alert`, `clock-daemon2`, `local-use-0`, `local-use-1`, `local-use-2`, `local-use-3`, `local-use-4`, `local-use-5`, `local-use-6`, `local-use-7` 
|`user-level`


a| [[quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.syslog-type]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.syslog-type[quarkus.log.handler.syslog."syslog-handlers".syslog-type]`

[.description]
--
Set the `SyslogType syslog type` this handler should use to format the message sent
--|`rfc5424`, `rfc3164` 
|`rfc5424`


a| [[quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.protocol]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.protocol[quarkus.log.handler.syslog."syslog-handlers".protocol]`

[.description]
--
Sets the protocol used to connect to the syslog server
--|`tcp`, `udp`, `ssl-tcp` 
|`tcp`


a| [[quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.use-counting-framing]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.use-counting-framing[quarkus.log.handler.syslog."syslog-handlers".use-counting-framing]`

[.description]
--
Set to `true` if the message being sent should be prefixed with the size of the message
--|boolean 
|`false`


a| [[quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.truncate]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.truncate[quarkus.log.handler.syslog."syslog-handlers".truncate]`

[.description]
--
Set to `true` if the message should be truncated
--|boolean 
|`true`


a| [[quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.block-on-reconnect]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.block-on-reconnect[quarkus.log.handler.syslog."syslog-handlers".block-on-reconnect]`

[.description]
--
Enables or disables blocking when attempting to reconnect a `org.jboss.logmanager.handlers.SyslogHandler.Protocol++#++TCP
TCP` or `org.jboss.logmanager.handlers.SyslogHandler.Protocol++#++SSL_TCP SSL TCP` protocol
--|boolean 
|`false`


a| [[quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.format]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.format[quarkus.log.handler.syslog."syslog-handlers".format]`

[.description]
--
The log message format
--|string 
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{3.}] (%t) %s%e%n`


a| [[quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.level]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.level[quarkus.log.handler.syslog."syslog-handlers".level]`

[.description]
--
The log level specifying, which message levels will be logged by syslog logger
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`ALL`


a| [[quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.async]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.async[quarkus.log.handler.syslog."syslog-handlers".async]`

[.description]
--
Indicates whether to log asynchronously
--|boolean 
|`false`


a| [[quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.async.queue-length]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.async.queue-length[quarkus.log.handler.syslog."syslog-handlers".async.queue-length]`

[.description]
--
The queue length to use before flushing writing
--|int 
|`512`


a| [[quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.async.overflow]]`link:#quarkus-log-logging-log-config_quarkus.log.handler.syslog.-syslog-handlers-.async.overflow[quarkus.log.handler.syslog."syslog-handlers".async.overflow]`

[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full
--|`block`, `discard` 
|`block`


h|[[quarkus-log-logging-log-config_quarkus.log.filters-log-cleanup-filters-internal-use]]link:#quarkus-log-logging-log-config_quarkus.log.filters-log-cleanup-filters-internal-use[Log cleanup filters - internal use]

h|Type
h|Default

a| [[quarkus-log-logging-log-config_quarkus.log.filter.-filters-.if-starts-with]]`link:#quarkus-log-logging-log-config_quarkus.log.filter.-filters-.if-starts-with[quarkus.log.filter."filters".if-starts-with]`

[.description]
--
The message starts to match
--|list of string 
|`inherit`


a| [[quarkus-log-logging-log-config_quarkus.log.filter.-filters-.target-level]]`link:#quarkus-log-logging-log-config_quarkus.log.filter.-filters-.target-level[quarkus.log.filter."filters".target-level]`

[.description]
--
The new log level for the filtered message, defaults to DEBUG
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`DEBUG`

|===
[NOTE]
[[memory-size-note-anchor]]
.About the MemorySize format
====
A size configuration option recognises string in this format (shown as a regular expression): `[0-9]+[KkMmGgTtPpEeZzYy]?`.
If no suffix is given, assume bytes.
====
